[package]
name = "baxxup"
version = "0.0.1"
authors = ["okysky1121 <58683489+okysky1121@users.noreply.github.com>"]
description = "baxxxxxxxxup"
repository = "https://github.com/okysky1121/baxxup"
license = "MIT"
edition = "2021"

[lib]
path = "crates/core/lib.rs"

[workspace]
resolver = "2"
members = []